--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -66,6 +66,9 @@
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
+           <property name="handleWidth">
+            <number>10</number>
+           </property>
            <widget class="QFrame" name="frame_11">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -248,7 +251,7 @@
                      <rect>
                       <x>0</x>
                       <y>0</y>
-                      <width>630</width>
+                      <width>712</width>
                       <height>1191</height>
                      </rect>
                     </property>
@@ -1227,7 +1230,7 @@
                                <rect>
                                 <x>0</x>
                                 <y>0</y>
-                                <width>594</width>
+                                <width>676</width>
                                 <height>148</height>
                                </rect>
                               </property>
@@ -3167,6 +3170,9 @@
                               <bool>false</bool>
                              </property>
                              <layout class="QHBoxLayout" name="horizontalLayout_39">
+                              <property name="topMargin">
+                               <number>0</number>
+                              </property>
                               <item>
                                <widget class="QPushButton" name="fir_order_ref_set">
                                 <property name="text">
@@ -3226,73 +3232,134 @@
                               <bool>false</bool>
                              </property>
                              <layout class="QHBoxLayout" name="horizontalLayout_28">
+                              <property name="topMargin">
+                               <number>0</number>
+                              </property>
                               <item>
-                               <widget class="QComboBox" name="sample_det"/>
-                              </item>
-                              <item>
-                               <widget class="QLabel" name="label_31">
-                                <property name="font">
-                                 <font>
-                                  <pointsize>20</pointsize>
-                                 </font>
+                               <layout class="QGridLayout" name="gridLayout_3">
+                                <property name="leftMargin">
+                                 <number>0</number>
                                 </property>
-                                <property name="text">
-                                 <string>÷ (</string>
+                                <property name="topMargin">
+                                 <number>0</number>
                                 </property>
-                               </widget>
-                              </item>
-                              <item>
-                               <widget class="QComboBox" name="ref_det"/>
-                              </item>
-                              <item>
-                               <widget class="QLabel" name="label_28">
-                                <property name="font">
-                                 <font>
-                                  <pointsize>20</pointsize>
-                                 </font>
-                                </property>
-                                <property name="text">
-                                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;× (&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                                </property>
-                               </widget>
-                              </item>
-                              <item>
-                               <widget class="QPushButton" name="sec_order_ref_setr1">
-                                <property name="text">
-                                 <string>Set S0</string>
-                                </property>
-                               </widget>
-                              </item>
-                              <item>
-                               <widget class="QLabel" name="label_27">
-                                <property name="font">
-                                 <font>
-                                  <pointsize>20</pointsize>
-                                 </font>
-                                </property>
-                                <property name="text">
-                                 <string>÷</string>
-                                </property>
-                               </widget>
-                              </item>
-                              <item>
-                               <widget class="QPushButton" name="sec_order_ref_setr2">
-                                <property name="text">
-                                 <string>Set R0</string>
-                                </property>
-                               </widget>
-                              </item>
-                              <item>
-                               <widget class="QLabel" name="label_29">
-                                <property name="font">
-                                 <font>
-                                  <pointsize>20</pointsize>
-                                 </font>
-                                </property>
-                                <property name="text">
-                                 <string>))</string>
-                                </property>
-                               </widget>
+                                <item row="0" column="0">
+                                 <widget class="QComboBox" name="sample_det"/>
+                                </item>
+                                <item row="0" column="1">
+                                 <widget class="QLabel" name="label_31">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>20</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>÷ (</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="5">
+                                 <widget class="QLabel" name="label_27">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>20</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>÷</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="2">
+                                 <widget class="QComboBox" name="ref_det"/>
+                                </item>
+                                <item row="1" column="0">
+                                 <widget class="QLabel" name="label_32">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>8</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>Sample Detector</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="1" column="6">
+                                 <widget class="QLabel" name="label_37">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>8</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>Reference Scan</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="7">
+                                 <widget class="QLabel" name="label_29">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>20</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>))</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="1" column="2">
+                                 <widget class="QLabel" name="label_35">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>8</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>Reference Detector</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="6">
+                                 <widget class="QPushButton" name="sec_order_ref_setr2">
+                                  <property name="text">
+                                   <string>Set R0</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="1" column="4">
+                                 <widget class="QLabel" name="label_36">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>8</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>Sample Scan</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="4">
+                                 <widget class="QPushButton" name="sec_order_ref_setr1">
+                                  <property name="text">
+                                   <string>Set S0</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                                <item row="0" column="3">
+                                 <widget class="QLabel" name="label_38">
+                                  <property name="font">
+                                   <font>
+                                    <pointsize>20</pointsize>
+                                   </font>
+                                  </property>
+                                  <property name="text">
+                                   <string>× (</string>
+                                  </property>
+                                 </widget>
+                                </item>
+                               </layout>
                               </item>
                              </layout>
                             </widget>
